2004-06-08  Pawel Salek

	* libbalsa/mailbox-filter.c: compile.
	* libbalsa/imap/imap-commands.c: set the readonly argument
	also when the handle has been already selected.

2004-06-07 16:51  PeterB

	* libbalsa/: mailbox_maildir.c, mailbox_mbox.c, mailbox_mh.c:
	manage `recent' flag.
	* libbalsa/: message.c, message.h: drop
	libbalsa_message_clear_recent--it's the driver's responsibility.
	* libbalsa/mailbox.c, src/balsa-index.c: check message number when
	searching.
	* libbalsa/mailbox-filter.c: match URL exactly when looking up
	filter section.
	* libbalsa/mailbox_local.c: retrieve user headers more reliably.

2004-06-06 20:11  PeterB

	* libbalsa/source-viewer.c, src/sendmsg-window.c:
	GTK_WRAP_WORD_CHAR is since gtk-2.4.0.
	* libbalsa/mailbox_mbox.c: change preface or postface only when
	non-NULL.
	* libbalsa/mailbox_mbox.c: space-stuff From_ lines in multipart
	preface and postface.

2004-06-04 17:47  PeterB

	* libbalsa/mailbox.c, libbalsa/mailbox.h, libbalsa/mailbox_imap.c,
	libbalsa/mailbox_local.c, libbalsa/mailbox_maildir.c,
	libbalsa/mailbox_mbox.c, libbalsa/mailbox_mh.c, libbalsa/message.c,
	libbalsa/message.h, src/balsa-message.c: drop
	message->{status,attach}_icon.
	* src/filter-edit-callbacks.c: don't crash on new filter.
	* src/filter-edit-callbacks.c: allow editing of compound
	conditions.
	* libbalsa/filter-funcs.c: eat space between left and right
	conditions.
	* src/main-window.c: document, and fix typo.
	* src/: balsa-app.c, balsa-index.c, filter-run-callbacks.c,
	main-window.c, main-window.h, pref-manager.c: don't refer to
	balsa_app.main_window in src/main-window.c.

2004-06-02 12:51  PeterB

	* src/toolbar-factory.c: simplify balsa_toolbar_remove_all; make
	bti->widget a weak pointer.

2004-05-31  Pawel Salek

	* libbalsa/libbalsa.[ch]: simplify thread recognition, do not
	destroy static mutexes.
	* libbalsa/{mailbox_local,rfc3156.c}.c: use
	libbalsa_am_i_subthread().
	* libbalsa/imap/imap-commands.c: actually do rename.